// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Switch /> > should match snapshot when toggled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_5__onxwju23 sprinkles_lineHeight_5__onxwju2c sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 Switch_toggleOn__6xc8dy2"
      data-active=""
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_handle_default__6xc8dy4 Switch_handle_active__6xc8dy5"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when toggled and disabled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        disabled=""
        role="switch"
        type="checkbox"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_5__onxwju23 sprinkles_lineHeight_5__onxwju2c sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 Switch_disabled__6xc8dy3 Switch_toggleOn__6xc8dy2"
      data-active=""
      data-disabled=""
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_handle_default__6xc8dy4 Switch_handle_active__6xc8dy5"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when un-toggled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_5__onxwju23 sprinkles_lineHeight_5__onxwju2c sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when un-toggled and disabled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        disabled=""
        role="switch"
        type="checkbox"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_5__onxwju23 sprinkles_lineHeight_5__onxwju2c sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330 Switch_disabled__6xc8dy3"
      data-disabled=""
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot without props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_5__onxwju23 sprinkles_lineHeight_5__onxwju2c sprinkles_color_neutral__onxwju6t typography_typographyStyles__yhjp330"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;
